# tron-zero-rust

./: .release-please-manifest.json  AGENTS.md  Cargo.toml  PLAN.md  RUST-DEV.md  release-please-config.json
.github/workflows/: deploy.yml  release-please.yml
.opencode/skills/docs/: SKILL.md
crates/client/: CHANGELOG.md  Cargo.toml
crates/client/src/: camera.rs  input.rs  main.rs  render.rs
crates/client/src/input/: keyboard.rs  mod.rs
crates/client/src/render/: arena.rs  camera.rs  mod.rs  player.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/src/: main.rs  systems.rs
crates/shared/: CHANGELOG.md  Cargo.toml
crates/shared/src/: constants.rs  lib.rs  math.rs  protocol.rs
crates/shared/src/components/: arena.rs  mod.rs  player.rs  trail.rs
crates/shared/src/systems/: arena.rs  mod.rs  player.rs
docs/: building.md  dev.md
docs/game/: core-mechanics.md
