[workspace]
members = ["crates/shared", "crates/server", "crates/client"]
resolver = "2"

[workspace.dependencies]
bevy = "0.19"
bevy_app = "0.19"
bevy_ecs = "0.19"
bevy_reflect = "0.19"
lightyear = "0.28"
bevy_egui = "0.41"
bevy_kira_audio = "0.26"
glam = "0.32"
serde = { version = "1", features = ["derive"] }
postcard = "1.1"
tracing = "0.1"
rand = "0.10"
reqwest = "0.13"
