[package]
name = "tron-zero-server"
version = "0.2.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", package = "tron-zero-shared" }
bevy.workspace = true
lightyear = { workspace = true, features = ["udp", "raw_connection", "input_native"] }
rand.workspace = true
reqwest.workspace = true
tracing.workspace = true
